<resources>
    <string name="app_name">SvampKartan</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_mushroom">ADD MUSHROOM</string>
    <string name="sign_in_email">Sign In Using Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_google">Sign In Using Google</string>
    <string name="signed_in_as">Signed In As</string>
    <string name="user_created_on">User Created On</string>
    <string name="number_markers_placed">Number Of Markers Placed</string>
    <string name="latest_species_found">Latest Species Found</string>
    <string name="latest_mark">Latest Mushroom Added On</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light_dark">Default / Xmas</string>
    <string name="font_size">Font Size</string>
    <string name="small_large">Normal / Large</string>
    <string name="result">Result:</string>
    <string name="identify">Identify</string>
    <string name="none">Not a Mushroom</string>
    <string name="retry">Retry</string>

</resources>